--- a/jogano.css
+++ b/jogano.css
@@ -13,6 +13,12 @@
 	top:.1px;
 	z-index:100;
 }
+.navi:hover{
+	transform: scale(1.2);
+	color:rgb(160,30,30);
+}
+.lang:hover{color:rgb(160,30,30);
+	}
 .products{
 font-family: Raleway-Bold;
 font-size: 1.4em;
@@ -63,6 +69,14 @@ top:1.9em;
 	left:94.5%;
 	top:1.7em;
 }
+.logo{
+position:absolute;
+left:5%;
+z-index:101;
+top:.9em;
+width:2em;
+}
+
 @media screen and (max-width: 1000px){ 
 .navi2{
 	width:100%;
@@ -73,7 +87,7 @@ top:1.9em;
 }
 .products{
 font-family: Raleway-Bold;
-font-size: 1.4em;
+font-size: 1.3em;
 color: black;
 text-decoration: none;
 position:absolute;
@@ -83,17 +97,17 @@ top:.9em;
 }
 .events{
 font-family: Raleway-Bold;
-font-size: 1.4em;
+font-size: 1.3em;
 color: black;
 text-decoration: none;
 position:absolute;
-left:35%;
+left:34%;
 z-index:101;
 top:.9em;
 }
 .about{
 font-family: Raleway-Bold;
-font-size: 1.4em;
+font-size: 1.3em;
 color: black;
 text-decoration: none;
 position:absolute;
@@ -117,11 +131,28 @@ top:2em;
 	width:100%;
 	height:2px;
 	position: absolute;
-	top:8em;
+	top:4em;
 	z-index:100;
 	background-color:rgb(160,30,30);
 }
-
+.hamburger{
+    position:absolute;
+    top:.4em;
+    right:5%;
+    font-size:1.8em;
+}
+.hamburger:hover{
+	transform: scale(1.2);
+}
+.cross{
+	 position:absolute;
+    top:.2em;
+    right:5%;
+    font-size:4em;
+}
+.cross:hover{
+	transform: scale(1.2);
+}
 
 }
 
