--- a/jogano.css
+++ b/jogano.css
@@ -1,7 +1,7 @@
 .naviline{
 	width:100%;
 	height:2px;
-	position: absolute;
+	position: fixed;
 	top:4em;
 	z-index:100;
 	background-color:rgb(160,30,30);
@@ -9,9 +9,10 @@
 .navigation{
 	width:100%;
 	height:4em;
-	position: absolute;
+	position: fixed;
 	top:.1px;
 	z-index:100;
+	background-color: white;
 }
 .navi:hover{
 	transform: scale(1.2);
@@ -24,7 +25,7 @@ font-family: Raleway-Bold;
 font-size: 1.4em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 left:36.5%;
 z-index:101;
 top:.9em;
@@ -34,7 +35,7 @@ font-family: Raleway-Bold;
 font-size: 1.4em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 left:54.5%;
 z-index:101;
 top:.9em;
@@ -44,7 +45,7 @@ font-family: Raleway-Bold;
 font-size: 1.4em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 left:70%;
 z-index:101;
 top:.9em;
@@ -54,7 +55,7 @@ top:.9em;
 font-size: .8em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 z-index:101;
 }
 .en{
@@ -70,11 +71,11 @@ top:1.9em;
 	top:1.7em;
 }
 .logo{
-position:absolute;
-left:5%;
+position:fixed;
+left:4.8%;
 z-index:101;
 top:.9em;
-width:2em;
+width:10.2em;
 }
 .price{
 font-family: PingFangSC-Semibold;
@@ -88,18 +89,26 @@ font-size:1.6em;
 .p-name{
 	font-family: Raleway-Bold;
 font-size: 32px;
-color: #000000;
+color: rgb(160,30,30);
 position:absolute;
-top:25%;
+top:26%;
 left:53.3%;
 font-size:1.6em;
+}
+.alchol{
+font-family: Lato-Regular;
+color: #000000;
+position:absolute;
+top:27.5%;
+left:82%;
+font-size:.7em;
 }
 
 @media screen and (max-width: 1000px){ 
 .navi2{
 	width:100%;
 	height:4em;
-	position: absolute;
+	position: fixed;
 	top:4em;
 	z-index:100;
 }
@@ -108,7 +117,7 @@ font-family: Raleway-Bold;
 font-size: 1.3em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 left:5%;
 z-index:101;
 top:.9em;
@@ -118,7 +127,7 @@ font-family: Raleway-Bold;
 font-size: 1.3em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 left:34%;
 z-index:101;
 top:.9em;
@@ -128,7 +137,7 @@ font-family: Raleway-Bold;
 font-size: 1.3em;
 color: black;
 text-decoration: none;
-position:absolute;
+position:fixed;
 left:58%;
 z-index:101;
 top:.9em;
@@ -148,13 +157,13 @@ top:2em;
 .naviline2{
 	width:100%;
 	height:2px;
-	position: absolute;
+	position: fixed;
 	top:4em;
 	z-index:100;
 	background-color:rgb(160,30,30);
 }
 .hamburger{
-    position:absolute;
+    position:fixed;
     top:.4em;
     right:5%;
     font-size:1.8em;
@@ -163,7 +172,7 @@ top:2em;
 	transform: scale(1.2);
 }
 .cross{
-	 position:absolute;
+	 position:fixed;
     top:.2em;
     right:5%;
     font-size:4em;
