--- a/jogano.css
+++ b/jogano.css
@@ -103,11 +103,20 @@ top:27.5%;
 left:82%;
 font-size:.7em;
 }
+.navi2 {
+	display:none;
+}
 
 @media screen and (max-width: 1000px){ 
-.navigation{
+.navi{
 	display:none;
 }	
+.lang{
+	display:none;
+}
+.navigation{
+	display:none;
+}
 .navi2{
 	width:100%;
 	height:4em;
@@ -144,6 +153,14 @@ position:fixed;
 left:58%;
 z-index:101;
 top:.9em;
+}
+.lang2{
+	font-family: Raleway-Light;
+font-size: .8em;
+color: black;
+text-decoration: none;
+position:fixed;
+z-index:101;
 }
 .en{
 left:82%;
