--- a/jogano.css
+++ b/jogano.css
@@ -5,6 +5,7 @@
 	top:4em;
 	z-index:100;
 	background-color:rgb(160,30,30);
+	left:0;
 }
 .navigation{
 	width:100%;
@@ -13,6 +14,7 @@
 	top:.1px;
 	z-index:105;
 	background-color: white;
+	left:0;
 }
 .navi:hover{
 	transform: scale(1.2);
@@ -78,20 +80,26 @@ top:.9em;
 width:10.2em;
 }
 .backk{
-	position:absolute;
-	left:2%;
+	position:fixed;
+	left:4%;
 	width: 4em;
-	color:black;
-	top:50%;
+	color:rgb(160,30,30);
+	top:15%;
 	z-index: 300;
+	font-size: 3em;
+	text-decoration: none;
+}
+.backk:hover{
+	transform: scale(1.2);
 }
 .price{
-font-family: PingFangSC-Semibold;
+font-family: Lato;
 font-size: 32px;
 color: #000000;
 position:absolute;
 top:22%;
 left:45%;
+width:40%;
 font-size:1.6em;
 }
 .p-name{
@@ -102,6 +110,7 @@ position:absolute;
 top:28%;
 left:45%;
 font-size:1.6em;
+width:40%;
 }
 .alchol{
 font-family: Lato-Regular;
@@ -110,6 +119,7 @@ position:relative;
 top:-1.3em;
 left:23em;
 font-size:.6em;
+width:10%;
 }
 
 .navi2 {
@@ -124,15 +134,19 @@ font-size:.6em;
 .tobuy{
 position: absolute;
 top:40em;
-left:14%;
+left:35%;
 background-color: black;
-
-font-family:Raleway-Regular;
+border: 2px;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
 font-size: 1em;
 color:rgb(160,30,30);
 z-index:200;
-width:8em;
-height:4em;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
 }
 .grape{
 	position:absolute;
@@ -198,13 +212,38 @@ h2{
 	width:100%;
 	line-height: 1.6em;
 }
+.tobuy{
+position: absolute;
+top:39em;
+left:16%;
+background-color: white;
+border-width: 2px;
+border: solid;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+text-decoration: none;
+}
+.tobuy:hover{
+	background-color:rgb(160,30,30);
+	color: white;
+}
 
-
+.navi2{
+	display: none;
+}
 @media screen and (max-width: 800px ){ 
 
 .navigationblock{
 	width:100%;
-	height:16em;
+	height:2em;
 	position: fixed;
 	top:0;
 	left:0;
@@ -260,7 +299,6 @@ z-index:101;
 top:15em;
 }
 .lang2{
-	font-family: Raleway-Light;
 font-size: .8em;
 color: black;
 text-decoration: none;
@@ -289,6 +327,7 @@ top:8.4em;
 	top:25em;
 	z-index:200;
 	background-color:rgb(160,30,30);
+	left:0;
 }
 .hamburger{
     position:fixed;
@@ -304,6 +343,7 @@ top:8.4em;
     top:.2em;
     right:5%;
     font-size:4em;
+    z-index:400;
 }
 .cross:hover{
 	transform: scale(1.2);
@@ -352,6 +392,33 @@ font-size:1.4em;
 	letter-spacing: .1em;
 	font-size: .9em;
 }
+.tobuy{
+position: absolute;
+top:39em;
+left:33%;
+background-color: white;
+border-width: 2px;
+border: solid;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+text-decoration: none;
+}
+.tobuy:hover{
+	background-color:rgb(160,30,30);
+	color: white;
+}
+
+
+
+
 }
 
 
@@ -363,7 +430,8 @@ color: rgb(160,30,30);
 position:absolute;
 top:28%;
 left:15%;
-font-size:1.4em;
+font-size:1.3em;
+width:80%;
 
 }
 .alchol{
@@ -371,10 +439,12 @@ font-family: Lato-Regular;
 color: #000000;
 position:relative;
 top:-1.6em;
-left:30em;
-font-size:.4em;
+left:90%;
+width:10%;
 }
-
+.icon{
+width:2.2em;
+}
 .price{
 font-family: Lato;
 font-size: 32px;
@@ -383,5 +453,190 @@ position:absolute;
 top:22%;
 left:15%;
 font-size:1.4em;
+width:30%;
 }
+.tobuy{
+position: absolute;
+top:37em;
+left:24%;
+width:25%;
+background-color: white;
+border-width: 2px;
+border: solid;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+text-decoration: none;
+}
+.grape{
+	position:absolute;
+	top:50em;
+	left:12%;
+	width:85%;
+	height:100%;
+	letter-spacing: .1em;
+	font-size: .9em;
+}
+.backk{
+	font-size: 2em;
+	left:2%;
+	width:10%;
+	top:10%;
+
+}
+
+.photo{
+	position:relative;
+	top:15em;
+	left:30%; 
+	width:17vw;
+	min-width: 8em;
+}
+
+.grapenum{
+	position:absolute;
+	top:.8em;
+	left:3em;
+font-family: Lato-Light;
+font-size: 1.1em;
+color: #000000;
+line-height: 45px;
+}
+.grapecompo{
+	position:absolute;
+	top:.8em;
+	left:30%;
+	font-family: Raleway-Regular;
+	font-size: 1.1em;
+	color: #000000;
+	line-height: 45px;
+	width:80%;
+}
+
+
+.region-description{
+	position:relative;
+	top:-.7em;
+	left:-3em;
+	font-family: Raleway-Regular;
+	color: #000000;
+    width:70%;
+}
+
+.pair-description{
+	position:relative;
+	top:-3.2em;
+	left:-10;
+	font-family: Raleway-Regular;
+	color: #000000;
+	width:100%;
+
+}
+.notes{
+	position:relative;
+	font-family: Raleway-Regular;
+	color:black;
+	font-size: .9em;
+	top:2em;
+	width:100%;
+	left:0;
+	line-height: 1.6em;
+}
+.logo{
+position:fixed;
+left:4.8%;
+z-index:300;
+top:.9em;
+width:40%;
+}
+
+
+.navigation{
+	display: none;
+}
+
+.navi2{
+	width:100%;
+	height:18em;
+	position: fixed;
+	top:0;
+	z-index:100;
+	background-color: white;
+}
+.products{
+font-family: Raleway-Bold;
+font-size: 2em;
+color: black;
+text-decoration: none;
+position:fixed;
+left:20%;
+z-index:101;
+top:20%;
+}
+.events{
+font-family: Raleway-Bold;
+font-size: 2em;
+color: black;
+text-decoration: none;
+position:fixed;
+left:20%;
+z-index:101;
+top:32%;
+}
+.about{
+font-family: Raleway-Bold;
+font-size: 2em;
+color: black;
+text-decoration: none;
+position:fixed;
+left:20%;
+z-index:101;
+top:44%;
+}
+.lang2{
+font-size: .8em;
+color: black;
+text-decoration: none;
+position:fixed;
+z-index:101;
+}
+.lang2:hover{
+	color:rgb(160,30,30);
+	}
+
+.en{
+font-family: Raleway-Light;
+left:82%;
+top:7.4em;
+}
+.gang{
+	left:87%;
+	top:7.4em;
+font-family: Raleway-Light;
+}
+.cn{
+	left:89%;
+	top:7.3em;
+font-family: Raleway-Light;
+}
+.cross{
+	 position:fixed;
+    top:.2em;
+    right:5%;
+    font-size:4em;
+    z-index:400;
+}
+
+
+
+
+
+
 }
