--- a/jogano.css
+++ b/jogano.css
@@ -99,8 +99,8 @@ h2{
 	display: none;
 }
 .box{
-	left:2%;
-	width:95%;
+	left:20%;
+	width:80%;
 	top:2em;
 	display:inline-block;
 	position:absolute;
@@ -164,6 +164,7 @@ h2{
 	letter-spacing: .1em;
 
 }
+
 h1{
 	position:absolute;
 	font-family: Raleway-Bold;
@@ -185,6 +186,28 @@ h3{
 	color: #A01E1E;
 	padding-left: 1em;
 	display: inline;
+}
+
+.filter{
+	position:fixed;
+	left:0;
+	padding-left: 5%;
+	top:5.5em;
+	width:20%;
+	height:100%;
+	font-family: Raleway-Regular;
+	font-size: 1em;
+    line-height: 1.6em;
+
+}
+h2{ position: relative;
+	font-family: Raleway-Semibold;
+	font-size:1em;
+	color:black;
+	text-align: left;
+}
+.lato{
+	font-family: Lato-Light;
 }
 
 @media screen and (max-width: 800px ){ 
