--- a/jogano.css
+++ b/jogano.css
@@ -104,7 +104,6 @@ h2{
 	top:2em;
 	display:inline-block;
 	position:absolute;
-	alignment-baseline: hanging;
 }
 .items:hover{
 	background-color:rgb(160,30,30) ;
@@ -131,7 +130,7 @@ h2{
 	padding-left: 30%;
 	padding-top: 20%;
 	width:40%;
-	position: relative;
+	position: absolute;
 }
 .redwine{
 	position: absolute;
@@ -172,11 +171,11 @@ h1{
 	color:black;
 	left:0%;
 	width:95%;
-	top:80%;
+	top:78%;
 	text-align: center;
 }
 h3{
-	top:3.5em;
+	top:23.4em;
 	position:relative;
 	font-size:1em;
 	left:0;
@@ -200,6 +199,10 @@ h3{
     line-height: 1.6em;
 
 }
+.filter2{
+	display:none;
+}
+
 h2{ position: relative;
 	font-family: Raleway-Semibold;
 	font-size:1em;
@@ -232,18 +235,20 @@ h2{ position: relative;
     display: block;
 }
 
-
+.apply{
+	display:none;
+}
 
 
 @media screen and (max-width: 800px ){ 
 
 .navigationblock{
 	width:100%;
-	height:2em;
+	height:4em;
 	position: fixed;
 	top:0;
 	left:0;
-	z-index:200;
+	z-index:300;
 	background-color: white;
 }
 
@@ -261,8 +266,9 @@ h2{ position: relative;
 	height:18em;
 	position: fixed;
 	top:0;
-	z-index:100;
+	z-index:380;
 	background-color: white;
+	left:0;
 }
 .products{
 font-family: Raleway-Bold;
@@ -330,6 +336,7 @@ top:8.4em;
     top:.4em;
     right:5%;
     font-size:1.8em;
+    z-index:400;
 }
 .hamburger:hover{
 	transform: scale(1.2);
@@ -345,6 +352,101 @@ top:8.4em;
 	transform: scale(1.2);
 }
 
+.apply{
+	position:fixed;
+    top:.4em;
+    right:10%;
+    font-size:1em;
+    font-family: Raleway-Bold;
+    z-index:200;
+
+}
+.apply:hover{
+	transform: scale(1.2);
+}
+.cross2{
+	 position:fixed;
+    top:.2em;
+    right:5%;
+    font-size:4em;
+    z-index:400;
+}
+.cross2:hover{
+	transform: scale(1.2);
+}
+.filter{
+	display:none;
+}
+.filter2{
+	top:0;
+	position:fixed;
+	left:0;
+	background-color: white;
+	z-index:200;
+		padding-left: 5%;
+	width:100%;
+	height:40em;
+	font-family: Raleway-Regular;
+	font-size: 1em;
+    line-height: 1.6em;
+    color:black;
+}
+.box{
+	left:0;
+	width:95%;
+}
+
+
+.items{
+	width:12em;
+	height: 22em;
+	border-width: 2px;
+	left:2em;
+	margin-left: 1em;
+	margin-top:3em;
+
+}
+.image{
+	padding-left: 26%;
+	padding-top: 10%;
+	width:50%;
+	position: absolute;
+}
+.redwine{
+	top:.6em;
+	left:.7em;
+	  height: .5em;
+  	width: .5em;
+}
+.whitewine{
+	top:.6em;
+	left:.7em;
+	  height: .5em;
+  	width: .5em;
+}
+.pricee{
+	top:.1em;
+	left:2em;
+	font-size: 1.2em;
+	letter-spacing: .05em;
+
+}
+
+h1{
+	position:absolute;
+	font-size:1em;
+	left:0%;
+	width:95%;
+	top:78%;
+}
+h3{
+	top:25em;
+	position:relative;
+	font-size:.8em;
+	left:0;
+	width:95%;
+	padding-left: .8em;
+}
 
 }
 
@@ -436,9 +538,64 @@ font-family: Raleway-Light;
     z-index:400;
 }
 
+.box{
+	left:0;
+	width:95%;
+}
 
 
+.items{
+	width:9em;
+	height: 16em;
+	border-width: 2px;
+	left:2em;
+	margin-left: 1em;
+	margin-top:3em;
 
+}
+
+.redwine{
+	top:.6em;
+	left:.7em;
+	  height: .5em;
+  	width: .5em;
+}
+.whitewine{
+	top:.6em;
+	left:.7em;
+	  height: .5em;
+  	width: .5em;
+}
+.pricee{
+	top:.1em;
+	left:2em;
+	font-size: 1em;
+	letter-spacing: .05em;
+
+}
+
+h1{
+	position:absolute;
+	font-size:.7em;
+	left:0%;
+	width:95%;
+	top:78%;
+}
+h3{
+	top:24.2em;
+	position:relative;
+	font-size:.6em;
+	left:0;
+	width:95%;
+	padding-left: .8em;
+}
+
+.image{
+	padding-left: 28%;
+	padding-top: 18%;
+	width:43%;
+	position: absolute;
+}
 
 
 }
