--- a/jogano.css
+++ b/jogano.css
@@ -1,3 +1,29 @@
+.event-pack{
+	width:100%;
+	height:22em;
+	background-color: white;
+	left:0;
+	top:2em;
+	position:relative;
+	border: 2px;
+	border-color: white;
+	border-bottom-color:rgb(160,30,30);
+	border-bottom-style: solid;
+}
+.event-title{
+	position:absolute;
+	width:30%;
+	left:0;
+	top:-7em;
+	height:100%;
+}
+.event-pic{
+	width:25em;
+	position:absolute;
+	background-color:black;
+	height:20em; 
+	left:30%;
+}
 
 .naviline{
 	width:100%;
@@ -251,6 +277,42 @@ h2{ position: relative;
 	left:40%;
 	width:20%;
 }
+.boicon{
+	text-decoration: none;
+	width:2em;
+}
+.icon{
+	font-size:2em;
+	width:1.2em;
+	padding-left: 1em;
+}
+.contact{
+	position: relative;
+	top:7.5em;
+	left:60%;
+	width:40%;
+}
+.lastline{
+  position:relative;
+  top:13em;
+  left:-15em;
+  width:100%; 
+  z-index:200;
+  color:black;
+ font-size: .7em;
+  letter-spacing: .1em;
+ 
+}
+.padding{
+	width:100%;
+	position: relative;
+	height:4em;
+	top:10em;
+	left:0;
+	background-color: white;
+	z-index:400;
+
+}
 
 @media screen and (max-width: 800px ){ 
 
@@ -474,7 +536,54 @@ h3{
     font-size:4em;
     z-index:400;
 }
+.end-address{
+	font-size: .8em;
+	font-family: Lato;
+	line-height: 2em;
+	position:relative;
+	top:15em;
+	left:8%;
+	width:90%;
+}
+.tele{
+	font-size: .8em;
+	font-family: Lato;
+	line-height: 1.5em;
+	position:relative;
+	top:16em;
+	left:8%;
+	width:90%;
+}
 
+.contact{
+	position: relative;
+	top:15em;
+	left:0%;
+	width:90%;
+}
+.lastline{
+  position:relative;
+  top:36em;
+  left:8%;
+  width:90%; 
+  z-index:200;
+  color:black;
+ font-size: .7em;
+  letter-spacing: .1em;
+ 
+}
+.icon{
+	width:1.5em;
+}
+.padding{
+	width:90%;
+	position: relative;
+	height:4em;
+	top:25em;
+	left:0;
+	background-color: white;
+
+}
 }
 
 
