--- a/jogano.css
+++ b/jogano.css
@@ -1,3 +1,21 @@
+.event-join{
+	font-family: Raleway-Bold;
+	font-size: 1.2em;
+	color:rgb(160,30,30);
+	position:absolute;
+	left:70%;
+	top:70%;
+}
+.event-detail{
+	position:absolute;
+	top:13%;
+	left:67%;
+	width:28%;
+	font-family: Raleway-Regular;
+	font-size: 1.1em;
+	line-height: 1.4em;
+
+}
 .event-pack{
 	width:100%;
 	height:22em;
@@ -12,17 +30,22 @@
 }
 .event-title{
 	position:absolute;
-	width:30%;
-	left:0;
-	top:-7em;
+	width:40%;
+	left:-6vw;
+	top:-11em;
 	height:100%;
+	font-size: 1.2em;
+	line-height: 1.8em;
 }
+
 .event-pic{
-	width:25em;
+	width:35%;
 	position:absolute;
-	background-color:black;
-	height:20em; 
-	left:30%;
+	height:100%; 
+	left:25%;
+	top:10%;
+	display:inline-block;
+
 }
 
 .naviline{
@@ -314,7 +337,7 @@ h2{ position: relative;
 
 }
 
-@media screen and (max-width: 800px ){ 
+@media screen and (max-width: 850px ){ 
 
 .navigationblock{
 	width:100%;
@@ -584,10 +607,114 @@ h3{
 	background-color: white;
 
 }
+
+.event-join{
+	font-family: Raleway-Bold;
+	font-size: 1.2em;
+	color:rgb(160,30,30);
+	position:absolute;
+	left:75%;
+	top:90%;
+	width:25%;
+}
+.event-detail{
+	position:absolute;
+	top:65%;
+	left:5%;
+	width:90%;
+	font-family: Raleway-Regular;
+	font-size: auto;
+	line-height: 1.4em;
+
+}
+.event-pack{
+	width:100%;
+	height:24em;
+	background-color: white;
+	left:0;
+	top:2em;
+	position:relative;
+	border: 2px;
+	border-color: white;
+	border-bottom-color:rgb(160,30,30);
+	border-bottom-style: solid;
+}
+.event-title{
+	position:absolute;
+	width:40%;
+	left:5%;
+	top:-11em;
+	height:100%;
+	font-size: 1.4em;
+	line-height: 1.8em;
+}
+.left{
+	text-align: left;
+}
+.lato{
+	text-align: left;
+}
+.event-pic{
+	width:35%;
+	position:absolute; 
+	left:50%;
+	top:10%;
+	display:inline-block;
+
+}
 }
 
 
 @media screen and (max-width: 480px ){
+
+.event-join{
+	font-family: Raleway-Bold;
+	font-size: 1.2em;
+	color:rgb(160,30,30);
+	position:absolute;
+	left:65%;
+	top:90%;
+	width:30%;
+}
+.event-detail{
+	position:absolute;
+	top:65%;
+	left:5%;
+	width:90%;
+	font-family: Raleway-Regular;
+	font-size: auto;
+	line-height: 1.4em;
+
+}
+.event-pack{
+	width:100%;
+	height:24em;
+	background-color: white;
+	left:0;
+	top:2em;
+	position:relative;
+	border: 2px;
+	border-color: white;
+	border-bottom-color:rgb(160,30,30);
+	border-bottom-style: solid;
+}
+.event-title{
+	position:absolute;
+	width:40%;
+	left:4%;
+	top:-11em;
+	height:100%;
+	font-size: 1.4em;
+}
+.event-pic{
+	width:35%;
+	position:absolute; 
+	left:50%;
+	top:10%;
+	display:inline-block;
+
+}
+
 
 .logo{
 position:fixed;
