--- a/jogano.css
+++ b/jogano.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 .parallax1 {
   background: url('https://wangx733.github.io/jogano/topbar.jpg');
   min-height: 400px;
@@ -59,6 +62,7 @@
   padding: 50px 80px;
   text-align: justify;
   height:15em;
+  font-family: Raleway-Regular;
 }
 .overlay1{
   background-color: white;
@@ -66,6 +70,7 @@
   padding: 50px 80px;
   text-align: justify;
   height:20em;
+  font-family: Raleway-Regular;
 }
 h5{
 	color:rgb(160,30,30);
@@ -475,7 +480,7 @@ h2{ position: relative;
     opacity:1;
     background-attachment: fixed;
     background-position: top;
-    background-position: left;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -1009,15 +1014,7 @@ h2{
     background-color: rgb(160,30,30);
 
 }
-.parallax1 {
-  position: relative;
-    opacity:1;
-    background-attachment: fixed;
-    background-position: top;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
 
 
 
