--- a/jogano.css
+++ b/jogano.css
@@ -279,7 +279,7 @@ h2{
 .box{
 	left:20%;
 	width:80%;
-	top:2em;
+	top:4em;
 	display:inline-block;
 	position:absolute;
 }
@@ -465,6 +465,168 @@ h2{ position: relative;
 	z-index:400;
 
 }
+
+
+.backk{
+	position:fixed;
+	left:4%;
+	width: 4em;
+	color:rgb(160,30,30);
+	top:15%;
+	z-index: 300;
+	font-size: 3em;
+	text-decoration: none;
+}
+.backk:hover{
+	transform: scale(1.2);
+}
+
+//////product display
+
+.dis-price{
+font-family: Lato;
+font-size: 32px;
+color: #000000;
+position:absolute;
+top:22%;
+left:45%;
+width:40%;
+font-size:1.6em;
+}
+.dis-p-name{
+	font-family: Raleway-Bold;
+font-size: 32px;
+color: rgb(160,30,30);
+position:absolute;
+top:28%;
+left:45%;
+font-size:1.6em;
+width:40%;
+}
+.dis-alchol{
+font-family: Lato-Regular;
+color: #000000;
+position:relative;
+top:-1.3em;
+left:23em;
+font-size:.6em;
+width:10%;
+}
+
+
+.dis-photo{
+	position:relative;
+	top:7em;
+	left:14%;
+	width:11em;
+}
+.dis-tobuy{
+position: absolute;
+top:40em;
+left:35%;
+background-color: black;
+border: 2px;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+}
+.dis-grape{
+	position:absolute;
+	top:15em;
+	left:45%;
+	width:40%;
+	height:100%;
+	letter-spacing: .1em;
+}
+.dis-icon{
+   width:3em;
+   position: relative;
+   top: 1em;
+}
+
+.dis-grapenum{
+	position:absolute;
+	top:.8em;
+	left:3em;
+font-family: Lato-Light;
+font-size: 1.2em;
+color: #000000;
+line-height: 45px;
+width:80%;
+}
+.dis-grapecompo{
+	position:absolute;
+	top:.8em;
+	left:6em;
+	font-family: Raleway-Regular;
+	font-size: 1.2em;
+	color: #000000;
+	line-height: 45px;
+}
+
+
+.dis-region-description{
+	position:relative;
+	top:-.7em;
+	left:-3em;
+	font-family: Raleway-Regular;
+	color: #000000;
+
+}
+
+.dis-pair-description{
+	position:relative;
+	top:-3.2em;
+	left:-3em;
+	font-family: Raleway-Regular;
+	color: #000000;
+
+}
+h2{
+	font-family: Raleway-Bold;
+}
+
+.dis-notes{
+	position:relative;
+	font-family: Raleway-Regular;
+	color:black;
+	font-size: .9em;
+	top:2em;
+	width:100%;
+	line-height: 1.6em;
+}
+.dis-tobuy{
+position: absolute;
+top:39em;
+left:16%;
+background-color: white;
+border-width: 2px;
+border: solid;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+text-decoration: none;
+}
+
+.dis-tobuy:hover{
+	background-color:rgb(160,30,30);
+	color: white;
+}
+
 
 @media screen and (max-width: 850px ){ 
 .parallax2, .parallax3, .parallax4 {
@@ -681,8 +843,8 @@ h2{ position: relative;
 }
 .image{
 	padding-left: 26%;
-	padding-top: 10%;
-	width:50%;
+	padding-top: 15%;
+	height:60%;
 	position: absolute;
 }
 .redwine{
@@ -831,6 +993,81 @@ h3{
 	min-width: 13em;
 
 }
+
+
+.dis-p-name{
+	font-family: Raleway-Bold;
+font-size: 32px;
+color: rgb(160,30,30);
+position:absolute;
+top:28%;
+left:20%;
+font-size:1.6em;
+width:40%;
+}
+.dis-alchol{
+font-family: Lato-Regular;
+color: #000000;
+position:relative;
+top:-1.6em;
+left:30em;
+font-size:.4em;
+}
+
+.dis-price{
+font-family: Lato;
+font-size: 32px;
+color: #000000;
+position:absolute;
+top:22%;
+left:20%;
+font-size:1.4em;
+}
+.dis-photo{
+	position:relative;
+	top:15em;
+	left:35%; 
+	width:18vw;
+	min-width: 8em;
+}
+.dis-grape{
+	position:absolute;
+	top:50em;
+	left:15%;
+	width:80%;
+	height:100%;
+	letter-spacing: .1em;
+	font-size: .9em;
+}
+.dis-tobuy{
+position: absolute;
+top:39em;
+left:33%;
+background-color: white;
+border-width: 2px;
+border: solid;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+text-decoration: none;
+}
+.dis-grey{
+border-color: grey;
+color:grey;
+
+}
+.dis-tobuy:hover{
+	background-color:rgb(160,30,30);
+	color: white;
+}
+
 }
 
 
@@ -1015,7 +1252,133 @@ h2{
 
 }
 
+.dis-p-name{
+	font-family: Raleway-Bold;
+font-size: 32px;
+color: rgb(160,30,30);
+position:absolute;
+top:28%;
+left:15%;
+font-size:1.3em;
+width:40%;
 
+}
+.dis-alchol{
+font-family: Lato-Regular;
+color: #000000;
+position:relative;
+top:-1.6em;
+left:90%;
+width:10%;
+}
+.dis-icon{
+width:2.2em;
+}
+.dis-price{
+font-family: Lato;
+font-size: 32px;
+color: #000000;
+position:absolute;
+top:22%;
+left:15%;
+font-size:1.4em;
+width:30%;
+}
+.dis-tobuy{
+position: absolute;
+top:37em;
+left:24%;
+width:25%;
+background-color: white;
+border-width: 2px;
+border: solid;
+border-color: rgb(160,30,30);
+font-family:Raleway-Bold;
+font-size: 1em;
+color:rgb(160,30,30);
+z-index:200;
+text-align: center;
+padding-bottom: 1em;
+padding-top: 1em;
+padding-left: 2em;
+padding-right: 2em;
+text-decoration: none;
+}
+
+.dis-grape{
+	position:absolute;
+	top:50em;
+	left:12%;
+	width:80%;
+	height:100%;
+	letter-spacing: .1em;
+	font-size: .9em;
+}
+.backk{
+	font-size: 2em;
+	left:2%;
+	width:10%;
+	top:10%;
+
+}
+
+.dis-photo{
+	position:relative;
+	top:15em;
+	left:30%; 
+	width:17vw;
+	min-width: 8em;
+}
+
+.dis-grapenum{
+	position:absolute;
+	top:.8em;
+	left:3em;
+font-family: Lato-Light;
+font-size: 1.1em;
+color: #000000;
+line-height: 45px;
+}
+.dis-grapecompo{
+	position:absolute;
+	top:.8em;
+	left:30%;
+	font-family: Raleway-Regular;
+	font-size: 1.1em;
+	color: #000000;
+	line-height: 45px;
+	width:80%;
+}
+
+
+.dis-region-description{
+	position:relative;
+	top:-.7em;
+	left:-3em;
+	font-family: Raleway-Regular;
+	color: #000000;
+    width:70%;
+}
+
+.dis-pair-description{
+	position:relative;
+	top:-3.2em;
+	left:-10;
+	font-family: Raleway-Regular;
+	color: #000000;
+	width:100%;
+
+}
+.dis-notes{
+	position:relative;
+	font-family: Raleway-Regular;
+	color:black;
+	font-size: .9em;
+	top:2em;
+	width:100%;
+	left:0;
+	line-height: 1.6em;
+}
 
 
 }
