--- a/product/jogano.css
+++ b/product/jogano.css
@@ -1,6 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
+
+
+[data-filter-view]:not([data-filter-view=""]) [data-filter-key],
+[data-filter-view]:not([data-filter-view=""]) [data-filter-price],
+[data-filter-view]:not([data-filter-view=""]) [data-filter-region],
+[data-filter-view]:not([data-filter-view=""]) [data-filter-body]{
+    display: none;
+}
+
+[data-filter-view] [data-filter-key="red"],
+[data-filter-view][data-filter-key="white"],
+[data-filter-view] [data-filter-price="p0"],
+[data-filter-view][data-filter-price="p350"],
+[data-filter-view][data-filter-region="burgendy"],
+[data-filter-view] [data-filter-region="bordeaux"],
+[data-filter-view] [data-filter-region="cahors"],
+[data-filter-view] [data-filter-region="loire"],
+[data-filter-view] [data-filter-body="light"],
+[data-filter-view][data-filter-body="medium"],
+[data-filter-view][data-filter-body="high"]
+{
+    display:inline-block;
+}
+
+
 .parallax1 {
   background: url('https://wangx733.github.io/jogano/topbar.jpg');
   min-height: 400px;
@@ -309,7 +334,6 @@ h2{
 	padding-top: 20%;
 	width:40%;
 	position: absolute;
-z-index:200;
 }
 .redwine{
 	position: absolute;
@@ -340,7 +364,6 @@ z-index:200;
 	color:black;
 	font-size: 1.4em;
 	letter-spacing: .1em;
-z-index:200;
 
 }
 
@@ -392,26 +415,6 @@ h2{ position: relative;
 }
 
 
-[data-filter-view]:not([data-filter-view=""]) [data-filter-key],
-{
-    display: none;
-}
-
-[data-filter-view][data-filter-view~="white"] [data-filter-key~="white"],
-[data-filter-view][data-filter-view~="red"] [data-filter-key="red"],
-[data-filter-view][data-filter-view~="p0"] [data-filter-key="p0"],
-[data-filter-view][data-filter-view~="p100"] [data-filter-key="p100"],
-[data-filter-view][data-filter-view~="p200"] [data-filter-key="p200"],
-[data-filter-view][data-filter-view~="p350"] [data-filter-key="p350"],
-[data-filter-view][data-filter-view~="burgendy"] [data-filter-key="burgendy"],
-[data-filter-view][data-filter-view~="bordeaux"] [data-filter-key="bordeaux"],
-[data-filter-view][data-filter-view~="cahors"] [data-filter-key="cahors"]
-[data-filter-view][data-filter-view~="light"] [data-filter-key="light"]
-[data-filter-view][data-filter-view~="medium"] [data-filter-key="medium"]
-[data-filter-view][data-filter-view~="high"] [data-filter-key="high"]
-{
-    display: block;
-}
 
 .end-address{
 	font-size: 1em;
@@ -474,7 +477,7 @@ h2{ position: relative;
 	left:4%;
 	width: 4em;
 	color:rgb(160,30,30);
-	top:8%;
+	top:15%;
 	z-index: 300;
 	font-size: 3em;
 	text-decoration: none;
@@ -483,13 +486,14 @@ h2{ position: relative;
 	transform: scale(1.2);
 }
 
+//////product display
 
 .dis-price{
 font-family: Lato;
 font-size: 32px;
 color: #000000;
 position:absolute;
-top:5em;
+top:22%;
 left:45%;
 width:40%;
 font-size:1.6em;
@@ -499,7 +503,7 @@ font-size:1.6em;
 font-size: 32px;
 color: rgb(160,30,30);
 position:absolute;
-top:7em;
+top:28%;
 left:45%;
 font-size:1.6em;
 width:40%;
@@ -692,12 +696,8 @@ text-align: left;
 	width:100%;
 	position: fixed;
 	padding-top:4em;
-	top:0;
 	z-index:380;
 	left:0;
-	background-color: white;
-	z-index:303;
-	height:3em;
 }
 .products{
 font-family: Raleway-Bold;
@@ -706,7 +706,7 @@ color: black;
 text-decoration: none;
 position:fixed;
 left:20%;
-z-index:305;
+z-index:101;
 top:2em;
 }
 .events{
@@ -716,7 +716,7 @@ color: black;
 text-decoration: none;
 position:fixed;
 left:20%;
-z-index:305;
+z-index:101;
 top:7em;
 }
 .about{
@@ -726,7 +726,7 @@ color: black;
 text-decoration: none;
 position:fixed;
 left:20%;
-z-index:305;
+z-index:101;
 top:12em;
 }
 .lang2{
@@ -759,9 +759,9 @@ top:7.5em;
 	border-bottom-color: rgb(160,30,30);
 	border-bottom: solid;
 	border-width:2px;
+	z-index:100;
 	background-color:white;
 	left:0;
-	z-index:300;
 }
 .hamburger{
     position:fixed;
@@ -1005,11 +1005,10 @@ h3{
 font-size: 32px;
 color: rgb(160,30,30);
 position:absolute;
-top:14%;
+top:28%;
 left:20%;
 font-size:1.6em;
 width:40%;
-z-index:200;
 }
 .dis-alchol{
 font-family: Lato-Regular;
@@ -1018,8 +1017,6 @@ position:relative;
 top:-1.6em;
 left:30em;
 font-size:.4em;
-
-z-index:200;
 }
 
 .dis-price{
@@ -1027,31 +1024,25 @@ font-family: Lato;
 font-size: 32px;
 color: #000000;
 position:absolute;
-top:10%;
+top:22%;
 left:20%;
 font-size:1.4em;
-
-z-index:200;
 }
 .dis-photo{
 	position:relative;
 	top:15em;
 	left:35%; 
-	width:16vw;
+	width:18vw;
 	min-width: 8em;
-z-index:200;
-
 }
 .dis-grape{
 	position:absolute;
 	top:50em;
 	left:15%;
-	width:90%;
+	width:80%;
 	height:100%;
 	letter-spacing: .1em;
 	font-size: .9em;
-
-z-index:200;
 }
 .dis-tobuy{
 position: absolute;
@@ -1080,19 +1071,6 @@ color:grey;
 .dis-tobuy:hover{
 	background-color:rgb(160,30,30);
 	color: white;
-}
-.backk{
-	position:fixed;
-	left:4%;
-	width: 4em;
-	color:rgb(160,30,30);
-	top:6%;
-	z-index: 300;
-	font-size: 3em;
-	text-decoration: none;
-}
-.backk:hover{
-	transform: scale(1.2);
 }
 
 }
@@ -1284,7 +1262,7 @@ h2{
 font-size: 32px;
 color: rgb(160,30,30);
 position:absolute;
-top:14%;
+top:28%;
 left:15%;
 font-size:1.3em;
 width:40%;
@@ -1336,7 +1314,7 @@ text-decoration: none;
 	position:absolute;
 	top:50em;
 	left:12%;
-	width:95%;
+	width:80%;
 	height:100%;
 	letter-spacing: .1em;
 	font-size: .9em;
@@ -1353,7 +1331,8 @@ text-decoration: none;
 	position:relative;
 	top:15em;
 	left:30%; 
-	width: 8em;
+	width:17vw;
+	min-width: 8em;
 }
 
 .dis-grapenum{
