modified:   chinese/.DS_Store modified:   chinese/About.html modified:   chinese/events.html modified:   chinese/home.html new file:   chinese/jogano.css modified:   chinese/products.html modified:   jogano.css modified:   product/24.html modified:   product/jogano.css modified:   products.html

--- a/chinese/jogano.css
+++ b/chinese/jogano.css
@@ -4,23 +4,21 @@
 
 
 [data-filter-view]:not([data-filter-view=""]) [data-filter-key],
-[data-filter-view]:not([data-filter-view=""]) [data-filter-price],
-[data-filter-view]:not([data-filter-view=""]) [data-filter-region],
-[data-filter-view]:not([data-filter-view=""]) [data-filter-body]{
+[data-filter-view]:not([data-filter-view=""]) [data-filter-location]{
     display: none;
 }
 
-[data-filter-view] [data-filter-key="red"],
-[data-filter-view][data-filter-key="white"],
-[data-filter-view] [data-filter-price="p0"],
-[data-filter-view][data-filter-price="p350"],
-[data-filter-view][data-filter-region="burgendy"],
-[data-filter-view] [data-filter-region="bordeaux"],
-[data-filter-view] [data-filter-region="cahors"],
-[data-filter-view] [data-filter-region="loire"],
-[data-filter-view] [data-filter-body="light"],
-[data-filter-view][data-filter-body="medium"],
-[data-filter-view][data-filter-body="high"]
+[data-filter-view][data-filter-view~="red"] [data-filter-key="red"],
+[data-filter-view][data-filter-view~="white"] [data-filter-key="white"],
+[data-filter-view][data-filter-view~="p0"] [data-filter-price="p0"],
+[data-filter-view][data-filter-view~="p350"] [data-filter-price="p350"],
+[data-filter-view][data-filter-view~="burgendy"] [data-filter-region="burgendy"],
+[data-filter-view][data-filter-view~="bordeaux"] [data-filter-region="bordeaux"],
+[data-filter-view][data-filter-view~="cahors"] [data-filter-region="cahors"],
+[data-filter-view][data-filter-view~="loire"] [data-filter-region="loire"],
+[data-filter-view][data-filter-view~="light"] [data-filter-body="light"],
+[data-filter-view][data-filter-view~="medium"] [data-filter-body="medium"],
+[data-filter-view][data-filter-view~="high"] [data-filter-body="high"]
 {
     display:inline-block;
 }
