renamed:    chinese/product/.DS_Store -> chinese/.DS_Store modified:   chinese/About.html modified:   chinese/events.html deleted:    chinese/product/19.html deleted:    chinese/product/21.html deleted:    chinese/product/24.html deleted:    chinese/product/31.html deleted:    chinese/product/47.html modified:   chinese/products.html modified:   product/.DS_Store modified:   product/1.html modified:   product/10.html modified:   product/11.html modified:   product/13.html modified:   product/14.html modified:   product/18.html modified:   product/19.html modified:   product/2.html modified:   product/20.html modified:   product/21.html modified:   product/22.html modified:   product/23.html modified:   product/24.html modified:   product/29.html modified:   product/30.html modified:   product/31.html modified:   product/4.html modified:   product/47.html modified:   product/7.html modified:   product/8.html modified:   product/9.html renamed:    chinese/product/1.html -> product/chinese/1.html renamed:    chinese/product/10.html -> product/chinese/10.html renamed:    chinese/product/11.html -> product/chinese/11.html renamed:    chinese/product/13.html -> product/chinese/13.html renamed:    chinese/product/14.html -> product/chinese/14.html renamed:    chinese/product/18.html -> product/chinese/18.html new file:   product/chinese/19.html renamed:    chinese/product/2.html -> product/chinese/2.html renamed:    chinese/product/20.html -> product/chinese/20.html new file:   product/chinese/21.html renamed:    chinese/product/22.html -> product/chinese/22.html renamed:    chinese/product/23.html -> product/chinese/23.html new file:   product/chinese/24.html renamed:    chinese/product/29.html -> product/chinese/29.html renamed:    chinese/product/30.html -> product/chinese/30.html new file:   product/chinese/31.html renamed:    chinese/product/4.html -> product/chinese/4.html new file:   product/chinese/47.html renamed:    chinese/product/7.html -> product/chinese/7.htm

--- a/product/chinese/jogano.css
+++ b/product/chinese/jogano.css
@@ -3,33 +3,27 @@
 
 
 
-.sidebar {
-  float: left;
-  text-transform: capitalize;
-}
-h3 {
-    margin-bottom: 0px;
-  }
-  ul {
-    margin-top: 3px;
-    margin-bottom: 0;
-  }
-  .sortoptions {
-    list-style: none;
-    padding-left: 0px;
-  }
+[data-filter-view]:not([data-filter-view=""]) [data-filter-key],
+[data-filter-view]:not([data-filter-view=""]) [data-filter-price],
+[data-filter-view]:not([data-filter-view=""]) [data-filter-region],
+[data-filter-view]:not([data-filter-view=""]) [data-filter-body]{
+    display: none;
 }
 
-.product {
-  max-width: 110px;
-  height: 70px;
-  margin: 20px;
-  padding: 20px;
-  text-align: center;
-  background-color: #eee;
+[data-filter-view] [data-filter-key="red"],
+[data-filter-view][data-filter-key="white"],
+[data-filter-view] [data-filter-price="p0"],
+[data-filter-view][data-filter-price="p350"],
+[data-filter-view][data-filter-region="burgendy"],
+[data-filter-view] [data-filter-region="bordeaux"],
+[data-filter-view] [data-filter-region="cahors"],
+[data-filter-view] [data-filter-region="loire"],
+[data-filter-view] [data-filter-body="light"],
+[data-filter-view][data-filter-body="medium"],
+[data-filter-view][data-filter-body="high"]
+{
+    display:inline-block;
 }
-
-
 
 
 .parallax1 {
